--- a/aptos/programs/bytes/Cargo.toml
+++ b/aptos/programs/bytes/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
 wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
 wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+
+[patch.crates-io]
+# WP1 patch
+tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
+sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
