feat: transaction proof (#64)
* feat: transaction inclusion proof

* feat: transaction internal struct + merkle program update

* feat: generic ledger info len + test with proper IOs

* test: update e2e test

* Update aptos/core/src/types/ledger_info.rs

Co-authored-by: François Garillot <4142+huitseeker@users.noreply.github.com>

* refactor: integrated review

---------

Co-authored-by: François Garillot <4142+huitseeker@users.noreply.github.com>

--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -14,6 +14,7 @@ aptos-programs = { path = "../aptos-programs" }
 wp1-sdk = { workspace = true }
 
 #Others
+getset = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
 
