--- a/aptos/light-client/benches/e2e/Cargo.toml
+++ b/aptos/light-client/benches/e2e/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 aptos-lc-core = { path = "../../../core", features = ["aptos"] }
+aptos-lc = { path = "../.." }
 aptos-programs = { path = "../../../aptos-programs" }
 # From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
 bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
