--- a/aptos/light-client/Makefile
+++ b/aptos/light-client/Makefile
@@ -4,4 +4,4 @@ benchmark:
 	@read -p "Enter benchmark name: " bench; \
 	RUST_LOG="debug" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native" \
-	cargo +nightly bench --features aptos --bench execute -- $$bench
+	cargo +nightly bench --features aptos --bench $$bench
