--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -14,6 +14,7 @@ aptos-programs = { path = "../aptos-programs" }
 wp1-sdk = { workspace = true }
 
 #Others
+anyhow = { workspace = true }
 getset = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
