--- a/aptos/server/Cargo.toml
+++ b/aptos/server/Cargo.toml
@@ -16,6 +16,7 @@ serde = { workspace = true }
 wp1-sdk = { workspace = true }
 
 # other
+once_cell = "1.19.0"
 tokio = "1.37"
 tokio-stream = "0.1"
 tonic = "0.8"
