--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -56,9 +56,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: taiki-e/install-action@nextest
-      - uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: "aptos -> target"
+      # - uses: Swatinem/rust-cache@v2
+      #   with:
+      #     workspaces: "aptos -> target"
       - name: Install deps
         run: |
           sudo apt-get update || true
@@ -106,9 +106,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
-      - uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: "aptos -> target"
+      # - uses: Swatinem/rust-cache@v2
+      #   with:
+      #     workspaces: "aptos -> target"
       - name: Install deps
         run: |
           sudo apt-get update || true
@@ -132,9 +132,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
-      - uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: "aptos -> target"
+      # - uses: Swatinem/rust-cache@v2
+      #   with:
+      #     workspaces: "aptos -> target"
       - uses: taiki-e/install-action@nextest
       - name: Install deps
         run: |
