ci: Add benchmarking on `workflow_dispatch` (#52)
* ci: Add benchmarks on `workflow_dispatch`

* Print bench summary to commit comment

* Switch to avx512 and format output

* Prep for review

* Address review

--- a/aptos/light-client/Makefile
+++ b/aptos/light-client/Makefile
@@ -1,7 +1,14 @@
-.PHONY: benchmark
+.PHONY: benchmark bench-ci
 
 benchmark:
 	@read -p "Enter benchmark name: " bench; \
 	RUST_LOG="debug" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native" \
 	cargo +nightly bench --features aptos --bench $$bench
+
+BENCH ?= e2e
+
+bench-ci:
+	RUST_LOG="info" \
+	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native" \
+	cargo +nightly bench --features aptos --bench $(BENCH)
