--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           sudo apt-get update || true
           
-          sudo apt-get install -y pkg-config libudev-dev
+          sudo apt-get install -y pkg-config libssl-dev libudev-dev
           
           git clone https://github.com/wormhole-foundation/wp1.git
           cd wp1/cli
@@ -104,8 +104,6 @@ jobs:
           git config --global url."https://${{ secrets.REPO_TOKEN }}@github.com".insteadOf https://github.com
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "aptos -> target"
@@ -130,8 +128,6 @@ jobs:
           git config --global url."https://${{ secrets.REPO_TOKEN }}@github.com".insteadOf https://github.com
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "aptos -> target"
