--- a/aptos/aptos-programs/Makefile
+++ b/aptos/aptos-programs/Makefile
@@ -1,11 +1,19 @@
 # Directory definitions
 PROGRAMS_DIR := ../programs
+BENCHMARKS_DIR := ../programs/benchmarks
 ELF_DIR := elf
 ARTIFACTS_DIR := artifacts
 BUILD_RESULT_NAME := riscv32im-succinct-zkvm-elf
 
 # Automatically discover program directories
 PROGRAMS := $(notdir $(wildcard $(PROGRAMS_DIR)/*))
+BENCHMARKS := $(notdir $(wildcard $(BENCHMARKS_DIR)/*))
+
+# Exclude the benchmarks directory from PROGRAMS
+PROGRAMS := $(filter-out benchmarks,$(PROGRAMS))
+
+# Append the benchmarks directories to PROGRAMS
+PROGRAMS += $(addprefix benchmarks/,$(BENCHMARKS))
 
 # Default target
 .PHONY: all clean $(PROGRAMS)
@@ -15,7 +23,6 @@ all: $(PROGRAMS) clean_elf
 # Build targets for each program
 $(PROGRAMS):
 	@echo "Building program $@"
-	@# Command to build each program
 	@cd $(PROGRAMS_DIR)/$@ && rustup run succinct cargo prove build
 	@echo "Moving artifacts..."
 	@mkdir -p $(ARTIFACTS_DIR)
