--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = { workspace = true }
 bcs = { workspace = true }
 bls12_381 = { workspace = true, features = ["experimental"] }
 bytes = { workspace = true, features = ["serde"] }
+cfg-if = { workspace = true }
 getset = { workspace = true }
 hex = { workspace = true }
 serde = { workspace = true }
@@ -57,3 +58,4 @@ aptos = [
     "dep:rand",
     "dep:rand_core"
 ]
+waypoint = []
