--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "core",
     "light-client",
     "aptos-programs",
+    "proof-server",
     "server",
 ]
 
@@ -25,10 +26,13 @@ bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594
 bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }
 bytes = "1.5.0"
 cfg-if = "1.0.0"
+clap = { version = "4.5.4", features = ["derive"] }
+env_logger = "0.11"
 glob = "0.3.1"
 getset = "0.1.2"
 hex = "0.4.3"
 itertools = "0.12.1"
+log = "0.4"
 move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.12.0" }
 proptest = { version = "1.4.0" }
 rand = "0.7.3"
