feat: aptos node communication (#114)
* Add initial proof server scaffolding

* chore: adjust data and logic to our needs

* fix: Add RUSTFLAGS --cfg tokio_unstable to doctests in CI

* feat: wip initialization of client

* feat: proving aptos data epoch change

* feat: asserting committee hash equality

* feat: full init logic

* feat: concurrent proving

* feat: bytes for all

* feat: daemon for client

* feat: ratchet trusted state

* chore: fix xclippy

* docs: documentation and licensing

* chore: updated documentation and changed name from dummy_client to client

---------

Co-authored-by: Samuel Burnham <45365069+samuelburnham@users.noreply.github.com>
Co-authored-by: Arthur Paulino <arthurleonardo.ap@gmail.com>
Co-authored-by: wwared <wwared@users.noreply.github.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,6 +69,8 @@ jobs:
       - name: Doctests
         run: |
           cargo test --doc
+        env:
+          RUSTFLAGS: "--cfg tokio_unstable"
         working-directory: ${{ github.workspace }}/${{ matrix.package }}
 
   clippy:
