--- a/aptos/proof-server/Cargo.toml
+++ b/aptos/proof-server/Cargo.toml
@@ -13,9 +13,13 @@ aptos-lc-core = { path = "../core", features = ["aptos"] }
 # workspace
 anyhow = { workspace = true }
 bcs = { workspace = true }
+chrono = { workspace = true }
 clap = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
+reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
+thiserror = { workspace = true }
+url = { workspace = true }
 wp1-sdk = { workspace = true }
