chore: Replace `wp1_` with `sphinx_` (#118)
* chore: Replace `wp1_` with `sphinx_`

- Replaced the dependency `wp1-zkvm` with `sphinx-zkvm` across various `.toml` files.
- Changed the use of `wp1_sdk` to `sphinx_sdk` in multiple files, affecting methods for proof verification, hash verifications, serialization and deserialization, and other I/O operations.
- Renamed the classes `SP1Proof` and `SP1Stdin` to `SphinxProof` and `SphinxStdin` respectively across several program files.
- Adjusted several tasks and functions in the `sphinx_sdk::ProverClient` to work with `SphinxProof` instead of `SP1Proof`.
- Updated the binary files `inclusion-program` and `epoch-change-program` under `aptos-programs/artifacts/`.
- Replaced the helper library `wp1_helper` with `sphinx_helper` in the build script and dependencies.
- Updated all references in code comments and test scenarios from `wp1` and `SP1` to `sphinx`.
- All changes are essentially refactoring without any major logical changes.

* chore: more renamings, fmt

--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -45,10 +45,10 @@ sha2 = "0.9"
 thiserror = "1.0.58"
 tiny-keccak = "2.0.2"
 url = "2.5.0"
-wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
-wp1-sdk = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
-wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
-wp1-helper = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }
+sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
+sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
+sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
+sphinx-helper = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
 tokio = "1.37"
 tokio-stream = "0.1"
 
@@ -56,6 +56,6 @@ tokio-stream = "0.1"
 [patch.crates-io]
 merlin = { git = "https://github.com/aptos-labs/merlin" }
 x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
-# WP1 patch
+# Sphinx patch
 tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
 sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
