--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -23,7 +23,7 @@ runs:
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
       with:
-          workspaces: "aptos -> target"
+        workspaces: "aptos -> target"
     - uses: taiki-e/install-action@nextest
     - name: Install deps
       shell: bash
@@ -32,8 +32,8 @@ runs:
 
         sudo apt-get install -y build-essential pkg-config libssl-dev libudev-dev cmake
 
-        git clone https://github.com/wormhole-foundation/wp1.git
-        cd wp1/cli
+        git clone https://github.com/lurk-lab/sphinx.git
+        cd sphinx/cli
         cargo install --locked --path .
 
         cd ~
