--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -34,7 +34,7 @@ runs:
 
         git clone https://github.com/lurk-lab/sphinx.git
         cd sphinx/cli
-        cargo install --locked --path .
+        cargo install --locked --force --path .
 
         cd ~
         cargo prove install-toolchain   
