--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -7,9 +7,37 @@ name: Manual benchmark
 on:
   workflow_dispatch:
     inputs:
+      # Name of the `aptos/light-client` benchmark to run
       bench-name:
         type: string
         required: true
+      # Optionally send a message to the below Zulip streams
+      # Defaults to false
+      zulip:
+        type: boolean
+        required: false
+      # User(s) to whom to send a private DM (optional)
+      # Comma-separated list of user ID integers, e.g. `11,12` (IDs can be found in user profiles)
+      # If not specified, sends to a stream/topic pair instead
+      private:
+        description: 'DM given user ID(s)'
+        type: string
+        required: false
+      # Zulip stream in which to send the message (optional)
+      # Ignored if `private` input is specified
+      # Defaults to `light_client` stream
+      stream:
+        type: string
+        required: false
+      # Zulip topic in which to send the message (optional)
+      # Ignored if `private` input is specified
+      # Defaults to `chat`
+      topic:
+        type: string
+        required: false
+  schedule:
+    # Bench report on Tuesdays at 11pm EST/12pm EDT
+    - cron:  '0 16 * * 4'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -37,6 +65,30 @@ jobs:
           export LIBCLANG_PATH=/usr/local/lib
 
           pip3 install jtbl
+      - name: Parse inputs
+        run: |
+          if [[ "${{ inputs.zulip }}" == "true" ]]; then
+            if [[ ! -z "${{ inputs.private }}" ]]; then
+              TYPE="private"
+              # Stream = private DM
+              STREAM="${{ inputs.private }}"
+            else
+              TYPE="stream"
+              if [[ ! -z "${{ inputs.stream }}" ]]; then
+                STREAM="${{ inputs.stream }}"
+              elif [[ -z "$STREAM" ]]; then
+                STREAM="light_client"
+              fi
+              if [[ ! -z "${{ inputs.topic }}" ]]; then
+                TOPIC="${{ inputs.topic }}"
+              elif [[ -z "$TOPIC" ]]; then
+                TOPIC="chat"
+              fi
+            fi
+            echo "TYPE=$TYPE" | tee -a $GITHUB_ENV
+            echo "STREAM=$STREAM" | tee -a $GITHUB_ENV
+            echo "TOPIC=$TOPIC" | tee -a $GITHUB_ENV
+          fi
       - name: Run benchmarks
         id: run-benchmarks
         run: |
@@ -58,8 +110,24 @@ jobs:
 
           echo "Time unit = milliseconds" | tee -a summary.md
           echo "Workflow URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" | tee -a summary.md
+
+          echo "report<<EOF" >> $GITHUB_OUTPUT
+          cat summary.md >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
         working-directory: ${{ github.workspace }}/aptos/light-client
       - name: Write bench on commit comment
         uses: peter-evans/commit-comment@v3
         with:
           body-path: ${{ github.workspace }}/aptos/light-client/summary.md
+      - name: Send report to Zulip
+        if: inputs.zulip
+        uses: zulip/github-actions-zulip/send-message@v1
+        with:
+          api-key: ${{ secrets.ZULIP_API_KEY }}
+          email: "aineko-bot@zulip.lurk-lab.com"
+          organization-url: "https://zulip.lurk-lab.com"
+          to: "${{ env.STREAM }}"
+          type: "${{ env.TYPE }}"
+          # Ignored if `type: private`
+          topic: "${{ env.TOPIC }}"
+          content: "${{ steps.run-benchmarks.outputs.report }}"
