--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -15,7 +15,7 @@ runs:
       shell: bash
       run: |
         echo "RUSTFLAGS=${{env.RUSTFLAGS}} --cfg tokio_unstable" | tee -a $GITHUB_ENV
-        echo "RUST_LOG=1" | tee -a $GITHUB_ENV
+        echo "RUST_LOG=info" | tee -a $GITHUB_ENV
     - uses: actions/setup-go@v5
       with:
         go-version: '1.22'
@@ -30,7 +30,7 @@ runs:
       run: |
         sudo apt-get update || true
 
-        sudo apt-get install -y build-essential pkg-config libssl-dev libudev-dev cmake
+        sudo apt-get install -y build-essential pkg-config libssl-dev libudev-dev cmake clang
 
         git clone https://github.com/lurk-lab/sphinx.git
         cd sphinx/cli
