--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -59,11 +59,10 @@ jobs:
         uses: ./.github/actions/setup
         with:
           pull_token: ${{ secrets.REPO_TOKEN }}
+      - uses: dtolnay/rust-toolchain@nightly
       - name: Install extra deps
         run: |
-          sudo apt-get install -y clang llvm-dev libclang-dev python3-pip
-          export LIBCLANG_PATH=/usr/local/lib
-
+          sudo apt-get update && sudo apt-get install -y python3-pip
           pip3 install jtbl
       - name: Parse inputs
         run: |
