--- a/.github/workflows/release-merge.yml
+++ b/.github/workflows/release-merge.yml
@@ -1,4 +1,4 @@
-name: On PR Merged
+name: Release PR Merged
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   # Creates a new tag if a release branch is merged
-  tag:
+  tag-release:
     if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     runs-on: ubuntu-latest
 
@@ -30,3 +30,17 @@ jobs:
           commit_sha: ${{ github.event.pull_request.merge_commit_sha }}
           tag: ${{ steps.get-version.outputs.version }}
 
+
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v4
+        with:
+          fromTag: ''
+          toTag: ${{ steps.get-version.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create Release
+        uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
+        with:
+          body: ${{steps.github_release.outputs.changelog}}
