--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,16 +15,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # Regex from https://semver.org/#is-there-a-suggested-regular-expression-regex-to-check-a-semver-string
       - name: Validate version
         run: |
-          echo "Validating version ${{ github.event.inputs.version }}..."
+          echo "Validating version..."
           D='0|[1-9][0-9]*'
           PW='[0-9]*[a-zA-Z-][0-9a-zA-Z-]*'
           MW='[0-9a-zA-Z-]+'
           if [[ "${{ github.event.inputs.version }}" =~ ^($D)\.($D)\.($D)(-(($D|$PW)(\.($D|$PW))*))?(\+($MW(\.$MW)*))?$ ]]; then
-            echo "Version ${{ github.event.inputs.version }} is valid."
+            echo "Version is valid."
           else
             echo "Version is not valid SemVer. Aborting..."
             exit 1
@@ -37,8 +39,8 @@ jobs:
           for path in "${CRATE_PATHS[@]}"; do
             cd $path
             OLD_VERSION=$(grep -oP 'version = "\K[^"]+' Cargo.toml)
-            if [[ "${{ inputs.version }}" > "$OLD_VERSION" ]]; then
-              sed -i 's/version = "'$OLD_VERSION'"/version = "${{ inputs.version }}"/' Cargo.toml
+            if [[ "${{ github.event.inputs.version }}" > "$OLD_VERSION" ]]; then
+              sed -i 's/version = "'$OLD_VERSION'"/version = "${{ github.event.inputs.version }}"/' Cargo.toml
             else
               echo "New version is not greater than the current version for $path. Aborting..."
               exit 1
@@ -50,10 +52,12 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add .
-          git commit -m "feat: bump version to ${{ inputs.version }}"
+          git commit -m "feat: bump version to ${{ github.event.inputs.version }}"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          title: "Release ${{ inputs.version }}"
-          branch: "release/${{ inputs.version }}"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Release ${{ github.event.inputs.version }}"
+          branch: "release/${{ github.event.inputs.version }}"
+          base: "dev"
