--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,7 @@ on:
       - "main"
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]
-    branches: [ main ]
+    branches: [ dev ]
 
 env:
   CARGO_TERM_COLOR: always
